# Night-owl

./: .env.example  next.config.ts  package-lock.json  package.json
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/api/routes/: audio.py  auth.py  health.py  interview.py  search.py
backend/api/websocket/: audio_ws.py
backend/core/: config.py  database.py
backend/hardware/: connect.py
backend/load_model/: google_search_api.py  realtime_audio.py  speech_to_text.py  text_generation.py  vad.py  vector_store.py
backend/orchestration/: interview.py  memory.py  nodes.py  state.py
backend/schemas/: interview_schema.py  plagiarism_schema.py
backend/services/: interview_services.py
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx  ThemeToggle.tsx
frontend/src/pages/: AchievementsPage.tsx  AssessmentsPage.tsx  Dashboard.tsx  FeedbackPage.tsx  InterviewPage.tsx  ProgressPage.tsx  TodoPage.tsx
prisma/: schema.prisma
python_backend/: graph.py  main.py  memory_monitor.py  requirements.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/evaluate/: route.ts
src/app/discussions/: page.tsx
src/app/interview/: page.tsx
src/components/: ClientHydrationGuard.tsx  FocusMonitor.tsx  ThemeSwitcher.tsx
src/components/discussion/: ReplyBox.tsx  ThreadCard.tsx  VoteButtons.tsx
src/lib/: discussions.ts  interviewSummary.ts  interviewTaskHistory.ts  leaderboard.ts  memoryMonitor.ts  mentorshipPlan.ts  prisma.ts  redis.ts
(+35 files in other folders)
