[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "gtts>=2.5.4",
    "huggingface-hub==0.36.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langgraph>=1.1.1",
    "lmppl>=0.3.2",
    "moshi>=0.2.13",
    "orchestration>=1.1.3",
    "pinecone>=8.1.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.3.0",
    "setuptools>=82.0.1",
    "sounddevice>=0.5.0",
    "speechrecognition>=3.15.2",
    "tavily-python>=0.7.23",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "webrtcvad>=2.0.10",
]
